[gd_scene format=3 uid="uid://csda1ggtkgvmm"]

[ext_resource type="Script" uid="uid://b4yi1nf87b2t7" path="res://Scripts/Battle/battle_manager.gd" id="1"]
[ext_resource type="PackedScene" path="res://Scenes/Battle/BattleStage3D.tscn" id="2"]
[ext_resource type="PackedScene" path="res://Scenes/Battle/BattleUI.tscn" id="3"]
[ext_resource type="Script" uid="uid://2kk1et6yk0xn" path="res://Scripts/Battle/battle_scene_3d.gd" id="4"]
[ext_resource type="Script" uid="uid://frt8hpi2gsso" path="res://Scripts/Battle/battle_event_dispatcher.gd" id="5"]
[ext_resource type="Script" uid="uid://cdg2xb5wo01ag" path="res://Scripts/Battle/battle_presenter_3d.gd" id="6"]

[node name="BattleScene3D" type="Node" unique_id=1765977175]
script = ExtResource("4")

[node name="BattleManager" type="Node" parent="." unique_id=1898507694]
script = ExtResource("1")

[node name="BattleEventDispatcher" type="Node" parent="." unique_id=139688461]
script = ExtResource("5")

[node name="BattlePresenter" type="Node" parent="." unique_id=1823853383]
script = ExtResource("6")

[node name="World3D" type="Node3D" parent="." unique_id=83910089]

[node name="BattleStage3D" parent="World3D" unique_id=468711759 instance=ExtResource("2")]

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=410685744]

[node name="BattleUI" parent="CanvasLayer" unique_id=1984527709 instance=ExtResource("3")]
